crates/aimee_app/src/snapshots/aimee_app__operation__tests__shell_output_empty_streams.snap
---
source: crates/aimee_app/src/operation.rs
expression: to_value(actual)
---
<shell_output
  command="silent_command"
  shell="/bin/bash"
  exit_code="0"
>
</shell_output>
